--- a/index-user.html
+++ b/index-user.html
@@ -124,14 +124,16 @@
                     <figure><img src="images/tinhnang_lotrinh_white.png" title="icon"></figure>
                     <p class="title">Lộ trình học và<br>luyện thi rõ ràng</p>
                   </div>
-                  <p class="description">Bạn không phải lo lắng về việc không biết bắt đầu học từ đâu, vì Gia sư TOEIC sẽ thiết lập một lộ trình học và luyện thi tối ưu dành riêng cho bạn.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal3" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Bạn không phải lo lắng về việc không biết bắt đầu học từ đâu, vì Gia sư TOEIC sẽ thiết lập một lộ trình học và luyện thi tối ưu dành riêng cho bạn.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal3" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
                 <div class="method-block__item method-block__item--right">
                   <div class="group-title">
                     <figure><img src="images/lay_lai_can_ban.png" title="icon"></figure>
                     <p class="title">Lấy lại ngữ pháp<br>căn bản</p>
                   </div>
-                  <p class="description">Chương trình học ngữ pháp của Gia sư TOEIC với giải thích chi tiết và bài tập ứng dụng sẽ giúp bạn nhanh chóng lấy lại căn bản ngữ pháp tiếng Anh.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal4" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Chương trình học ngữ pháp của Gia sư TOEIC với giải thích chi tiết và bài tập ứng dụng sẽ giúp bạn nhanh chóng lấy lại căn bản ngữ pháp tiếng Anh.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal4" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
               </div>
               <div class="method-block__bottom">
@@ -140,17 +142,19 @@
                     <figure><img src="images/icon-pen-2.png" title="icon"></figure>
                     <p class="title">Học nhuần nhuyễn<br>từ vựng TOEIC thông dụng</p>
                   </div>
-                  <p class="description">Với với bộ 600 từ vựng TOEIC và các đề luyện tập được dịch và giải thích kĩ càng, bạn sẽ nắm chắc trong tay những từ vựng thường xuyên xuất hiện nhất trong đề thi TOEIC.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal2" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Với với bộ 600 từ vựng TOEIC và các đề luyện tập được dịch và giải thích kĩ càng, bạn sẽ nắm chắc trong tay những từ vựng thường xuyên xuất hiện nhất trong đề thi TOEIC.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal2" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
                 <div class="method-block__item method-block__item--right">
                   <div class="group-title">
                     <figure><img src="images/meo_lam_bai.png" title="icon"></figure>
                     <p class="title">Mẹo làm 7 phần<br>của để thi TOEIC</p>
                   </div>
-                  <p class="description">Gia sư TOEIC đã đúc kết những kinh nghiệm khi làm bài thi TOEIC như các loại bẫy cần tránh, cách suy luận chọn đáp án, v.v. để hướng dẫn bạn làm bài vừa nhanh vừa chính xác.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal1" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Gia sư TOEIC đã đúc kết những kinh nghiệm khi làm bài thi TOEIC như các loại bẫy cần tránh, cách suy luận chọn đáp án, v.v. để hướng dẫn bạn làm bài vừa nhanh vừa chính xác.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal1" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
               </div>
-            </div>
+            </div><a href="javascript:;" title="Học thử miễn phí" data-create-button=".create-accout" class="btn-link btn-learn">TẠO TÀI KHOẢN HỌC THỬ</a>
           </div>
           <div class="describe-user__block__method have-basic">
             <div class="method-block have-basic">
@@ -160,14 +164,16 @@
                     <figure><img src="images/icon-method.png" title="icon"></figure>
                     <p class="title">Củng cố ngữ pháp<br>một cách hệ thống</p>
                   </div>
-                  <p class="description">Chương trình học ngữ pháp với bài học và bài tập ứng dựng sẽ giúp bạn nắm vững tất cả 17 điểm ngữ pháp quan trọng nhất trong đề thi TOEIC, từ cơ bản đến nâng cao.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal7" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Chương trình học ngữ pháp với bài học và bài tập ứng dựng sẽ giúp bạn nắm vững tất cả 17 điểm ngữ pháp quan trọng nhất trong đề thi TOEIC, từ cơ bản đến nâng cao.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal7" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
                 <div class="method-block__item method-block__item--right">
                   <div class="group-title">
                     <figure><img src="images/icon-method1.png" title="icon"></figure>
                     <p class="title">Nắm vững từ vựng<br>TOEIC thiết yếu</p>
                   </div>
-                  <p class="description">Bộ 600 từ vựng TOEIC sẽ giúp bạn ghi nhớ những từ vựng quan trọng nhất trong đề thi TOEIC để bạn hoàn toàn tự tin khi đi thi.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal6" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Bộ 600 từ vựng TOEIC sẽ giúp bạn ghi nhớ những từ vựng quan trọng nhất trong đề thi TOEIC để bạn hoàn toàn tự tin khi đi thi.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal6" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
               </div>
               <div class="method-block__bottom">
@@ -176,14 +182,16 @@
                     <figure><img src="images/tinhnang_deluyentap_white.png" title="icon"></figure>
                     <p class="title">Đề luyện tập và đề thi<br>có giải thích cụ thể</p>
                   </div>
-                  <p class="description">Mang đến cho bạn một thư viện đề luyện tập khổng lồ được dịch và giải thích chi tiết từng câu một, giúp bạn tự luyện một cách dễ dàng. Chỉ có ở Gia sư TOEIC!</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal5" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Mang đến cho bạn một thư viện đề luyện tập khổng lồ được dịch và giải thích chi tiết từng câu một, giúp bạn tự luyện một cách dễ dàng. Chỉ có ở Gia sư TOEIC!</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal5" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
                 <div class="method-block__item method-block__item--right">
                   <div class="group-title">
                     <figure><img src="images/tinhnang_lotrinh_white.png" title="icon"></figure>
                     <p class="title">Lộ trình học và luyện thi<br>thông minh</p>
                   </div>
-                  <p class="description">Những thông số quan trọng như độ chính xác khi làm bài và các cột mốc điểm sẽ giúp bạn theo dõi sự tiến bộ của mình và biết rằng mình đã tăng bao nhiêu điểm khi luyện thi.</p><a href="javascript:;" title="Xem chi tiết" data-toggle="modal" data-target="#myModal8" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></a>
+                  <p class="description">Những thông số quan trọng như độ chính xác khi làm bài và các cột mốc điểm sẽ giúp bạn theo dõi sự tiến bộ của mình và biết rằng mình đã tăng bao nhiêu điểm khi luyện thi.</p>
+                  <button type="button" data-toggle="modal" data-target="#myModal8" class="btn-link"><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span><span>Xem chi tiết</span></button>
                 </div>
               </div>
             </div><a href="javascript:;" title="Học thử miễn phí" data-create-button=".create-accout" class="btn-link btn-learn">TẠO TÀI KHOẢN HỌC THỬ</a>
