--- a/index-user.html
+++ b/index-user.html
@@ -15,11 +15,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="js/modernizr.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </head>
   <body class="home">
     <header class="header1">
@@ -267,10 +262,8 @@
               <figure class="block-step desktop"><img src="images/img-step.png" alt="icon"></figure>
               <figure class="block-step mobile"><img src="images/img-step1.png" alt="icon"></figure>
               <div class="block-item">
-                <div class="items-big">
-                  <figure><img src="images/icon-pen-7.png" title="icon"></figure>
-                  <p class="description">Lộ trình từ điểm khởi đầu đến điểm đích đến sẽ được tạo ra cho bạn:</p>
-                </div>
+                <div class="items-big"><img src="images/icon-pen-7.png" title="icon"></div>
+                <p class="description">Lộ trình từ điểm khởi đầu đến điểm đích đến sẽ được tạo ra cho bạn:</p>
               </div>
             </div>
             <div class="modal-body">
